# snippets

./: .gitignore  LICENSE  README  README.md  runvm.sh
C/argp/: Makefile  main.c  test.1  testargp
C/ast/: README.md  astobject.c  astobject.h  eis.c  eis.h  lexerobject.c  lexerobject.h  main.c  parserobject.c  parserobject.h  tokenobject.c  tokenobject.h  version.h  version.h.in  visitorobject.c  visitorobject.h
C/cmdline/: Makefile  main.c  parse
C/example_library/: CMakeLists.txt  INSTALL.txt  README.md  requirements.txt
C/example_library/docs/doxygen/: doxyfile  example_related_pages.md  makefile
C/example_library/examples/: CMakeLists.txt  example1.c
C/example_library/src/: CMakeLists.txt  electrox.h  src1.c  utilities.c
C/example_library/tests/: CMakeLists.txt  runtests.c
C/gnuplot/: Makefile  README.md  gnuplot.c
C/gsl/: Makefile  README.md  main.c
C/oop/: Makefile  README.md  fib.f90  object.c  object.h
C/openblas/: Makefile  README.md  array.c  test_blas.c  test_restrict.c
C/regex/: README  main.c
C/tk_gui_C/: Makefile  README.md  gui.tcl  tkgui.c
C/tui/: Makefile_  config.status  configure  configure.ac  configure~
C_and_Fortran/derived_types/: Makefile  cmain.c  cmain.h  fmain.f90  fobject_cmpl.f90  fobject_simple.f90
C_and_Fortran/strings/: Makefile  c_func.c  cmain.c  f_func.f90  fmain.f90  precisions.f90
Fortran/allocatable/: Makefile  main.f90
Fortran/command_line_args/: Makefile  fpm.toml  main.f90  test.1
Fortran/example_library/: Makefile  README.md
Fortran/mandelbrot/: README.md  configuration  fpm.toml  plot.py
Fortran/mandelbrot/pywrapper/: pyproject.toml  setup.py
Fortran/mandelbrot/pywrapper/pymandelbrot/: mandelbrot_core.c
Fortran/openblas/: Makefile
Fortran/prep/: Makefile  cmod.FF  cmod.c  configure.sh  core.FF  core.f90  doc.sh  doxin  make.in  man2htmlhelp.txt  prephelp.txt  test.f90  test.md  test.tex  test2.f90
Fortran/progressbar/: Makefile
Fortran/tk_gui/: Makefile  gui.tcl
Python/: README.md
Python/Cextension/: MANIFEST.in  README.md  run_buffer_protocole.py  run_callback.py  run_capi.py  run_fastiter.py  setup.py  site.cfg
Python/database/: sql.py
Python/decorators/: wrap.py
Python/embed_exe/: pyproject.toml  setup.py
Python/f2py/: MANIFEST.in  README.md  run.py  setup.py
Python/matplotlib/: artist_anim.py  func_anim.py  gui.py
Python/multiprocessing/: multiprocessing_example.py  multiprocessing_example2.py  thread_example.py
Python/science/: optimization.py  symbolic.py
Python/subprocess/: clipboard.py  download_packages.py  open_pdf_file.py  open_web_page.pdf.py  packages.conf
Python/tkinter_widgets/: canvas.py  figureframe.py  multiple_windows.py  scrolledframe.py  tkframeanimate.py  treeview.py
bash/: app.sh  args.sh  backup.sh
debian/: .gitignore  Makefile  NEWS  README  configure.sh
debian/debian/: changelog  control  copyright
debian/docs/: index.html
getopt_c/: fpm.toml
manpages/: Makefile  configure
tcltk/: test.tcl
texinfo/: Makefile  configure.sh  extract.sh  html.cfg  latex2texi.sh  make.in
(+160 files in other folders)
